SVM新分类方法新特征提取

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,20 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.mat
+*.fig
+aa1233321.m
+across_zero_rate.m
+aenergy_ratio.m
+aligang.m
+frequency.m
+frame2time.m
+cut_yuzhi8.m
+cross_zero_rate.m
+convert_dat_mat.m
+carsmall.m
+svmStruct2_3.mat
+svmStruct1_0.mat
+*.mat
+*.mat
+ayuzhi.m
